[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data_exploration"
version = "0.4.4"
authors = [
  { name="Jeroen Buil", email="jeroen.buil@wur.nl" },
]
description = "Tools for Explorative Data Analysis within FI projects"
readme = "README.md"
requires-python = ">=3.11"
  dependencies = [
    'ipywidgets==8.1.2',
    'numpy==1.24.2',
    'openTSNE==1.0.1',
    'pandas==2.0.3',
    'plotly==5.21.0',
    'pytest==7.4.3',
    'scikit_learn==1.3.2',
    'umap-learn==0.5.6'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://git.wur.nl/FoodInformatics/ml-packages/data_exploration"